# openadapt-agent

./: .gitignore  CLAUDE.md  README.md  llms.txt  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: DESIGN.md  DISTRIBUTION.md
scripts/: check_dist.py  check_release_artifacts.py  smoke_client.py
src/openadapt_agent/: __init__.py  __main__.py  attended.py  bridge.py  bundles.py  cli.py  config.py  executor.py  flow_service.py  mcp.py  runner.py  session.py  skill.py
tests/: __init__.py  conftest.py  test_attended_bridge.py  test_bridge.py  test_cli.py  test_config.py  test_distribution.py  test_executor.py  test_mcp_server.py  test_runner.py  test_session.py  test_skill.py
tests/golden/: skill_appendix.md
