[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openadapt-agent"
version = "2.0.0.dev0"
description = "Agent-facing bridge for openadapt-flow: expose compiled workflow bundles as MCP servers and Agent Skills (Experimental)"
readme = "README.md"
# openadapt-flow pins <3.13 (rapidocr-onnxruntime); this package inherits it.
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    {name = "Richard Abrich", email = "richard@openadapt.ai"}
]
maintainers = [
    {name = "OpenAdaptAI", email = "contact@openadapt.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "agent-skills", "gui", "automation", "workflow", "openadapt", "governed"]

dependencies = [
    # Governed workflow compiler/runtime this package bridges. Execution
    # shells out to its CLI; bundle metadata loads via its IR.
    "openadapt-flow>=1.9,<2",
    # Official Model Context Protocol SDK (stdio server transport).
    "mcp>=1.2",
    # Structured concurrency runtime the mcp SDK already uses; we call
    # anyio.run / to_thread directly.
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    # Parses smithery.yaml in the distribution-artifact guard tests.
    "pyyaml>=6.0",
]

[project.scripts]
openadapt-agent = "openadapt_agent.cli:main"

[project.urls]
Homepage = "https://github.com/OpenAdaptAI/openadapt-agent"
Repository = "https://github.com/OpenAdaptAI/openadapt-agent"
Documentation = "https://github.com/OpenAdaptAI/openadapt-agent#readme"
"Bug Tracker" = "https://github.com/OpenAdaptAI/openadapt-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openadapt_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
